--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <link rel="stylesheet" href="style.css">   
         <title>Personal Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
     </head>
     <body>
         
@@ -10,16 +13,18 @@
             <h1>Personal Portfolio</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Contact">Contact</a></li>
                 
             </ul>
         </nav>
         </div>
         <main>
-            <h3> This is the Home Page</h3>
+            <div id="home">
+            <h3> </h3>
+            </div>
         </main>
     </body>
 </html>
