--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#Contact">Contact</a></li>
                 <li><a href="#Projects">Projects</a></li>
-                <li><a href="#About">About</a></li>
+                <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Home">Home</a></li>
                 
             </ul>
@@ -23,7 +23,12 @@
         </div>
         <main>
             <div id="home">
-            <h3> </h3>
+            <h3> Allen Huntley</h3>
+            <img id="allen-headshot" src="portfoliopic.jpeg">
+            </div>
+            <div id="short-blurb">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa adipisci nisi eos perferendis, et accusantium aut ipsum tempora ratione? <br>
+                Iste voluptate amet laborum dolorem earum accusamus, eius magnam odit.
             </div>
         </main>
     </body>
