added the skills section along with those photos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         </div>
         <main>
-            <div id="home">
+            <div id="Home">
             <h3> Allen Huntley</h3>
             <img id="allen-headshot" src="portfoliopic.jpeg">
             </div>
@@ -30,6 +30,16 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa adipisci nisi eos perferendis, et accusantium aut ipsum tempora ratione? <br>
                 Iste voluptate amet laborum dolorem earum accusamus, eius magnam odit.
             </div>
+            
+            <div id="Skills">
+                <h3>My Skills</h3><br>
+                <img src="https://imgs.search.brave.com/wLjt9bMfWqAa7nSuz2yehLVIsY1wc2CZShZjr8xgt6E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuc2Vla2xvZ28u/Y29tL2xvZ28tcG5n/LzIwLzIvaHRtbDUt/bG9nby1wbmdfc2Vl/a2xvZ28tMjA2ODM0/LnBuZw">
+                <img src="https://imgs.search.brave.com/cVNKvKp-SQXNRI_4DGbws66voWLYNwQve1kBvn7aldk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZnJlZXBuZ2xvZ29z/LmNvbS91cGxvYWRz/L2h0bWw1LWxvZ28t/cG5nL2h0bWw1LWxv/Z28tY3NzLWxvZ28t/cG5nLXRyYW5zcGFy/ZW50LXN2Zy12ZWN0/b3ItYmllLXN1cHBs/eS05LnBuZw">
+                <img src="https://imgs.search.brave.com/f4EjDWIhF19smfWHnQbGLanL_fPr7p4Hie6u_iUWecc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wMjcv/MTI3LzQ2My9zbWFs/bC9qYXZhc2NyaXB0/LWxvZ28tamF2YXNj/cmlwdC1pY29uLXRy/YW5zcGFyZW50LWZy/ZWUtcG5nLnBuZw">
+                <img src="https://imgs.search.brave.com/gLtUuF9fkSyZMSsl8qQPMgOAYK5LskYmz5RxWDA3XQk/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9hc3Nl/dHMuc3RpY2twbmcu/Y29tL2ltYWdlcy82/MmE3NGRkMTIyMzM0/M2ZiYzIyMDdkMDAu/cG5n">
+                <img src="https://imgs.search.brave.com/ESjybVgMKxNipMFCHp0N_pi5o6WW_GFZneE76DBJ55s/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxNi8w/NS9QeXRob24tTG9n/by1QTkctSW1hZ2Uu/cG5n">
+                <img src="https://imgs.search.brave.com/BAxhkzCHDEaIcz5cLgYP9yqvYsPtEpX478omuliMY9Y/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9sb2dv/cy13b3JsZC5uZXQv/d3AtY29udGVudC91/cGxvYWRzLzIwMjUv/MDcvTXlTUUwtTG9n/by0yMDAyLTUwMHgy/ODEucG5n">
+                </div>
         </main>
     </body>
 </html>
