fixed the layout of the skills pictures

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa adipisci nisi eos perferendis, et accusantium aut ipsum tempora ratione? <br>
                 Iste voluptate amet laborum dolorem earum accusamus, eius magnam odit.
             </div>
-            
+            <h3 class="skills-header">My Skills</h3>
             <div id="Skills">
-                <h3>My Skills</h3><br>
                 <img src="https://imgs.search.brave.com/wLjt9bMfWqAa7nSuz2yehLVIsY1wc2CZShZjr8xgt6E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuc2Vla2xvZ28u/Y29tL2xvZ28tcG5n/LzIwLzIvaHRtbDUt/bG9nby1wbmdfc2Vl/a2xvZ28tMjA2ODM0/LnBuZw">
                 <img src="https://imgs.search.brave.com/cVNKvKp-SQXNRI_4DGbws66voWLYNwQve1kBvn7aldk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZnJlZXBuZ2xvZ29z/LmNvbS91cGxvYWRz/L2h0bWw1LWxvZ28t/cG5nL2h0bWw1LWxv/Z28tY3NzLWxvZ28t/cG5nLXRyYW5zcGFy/ZW50LXN2Zy12ZWN0/b3ItYmllLXN1cHBs/eS05LnBuZw">
                 <img src="https://imgs.search.brave.com/f4EjDWIhF19smfWHnQbGLanL_fPr7p4Hie6u_iUWecc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wMjcv/MTI3LzQ2My9zbWFs/bC9qYXZhc2NyaXB0/LWxvZ28tamF2YXNj/cmlwdC1pY29uLXRy/YW5zcGFyZW50LWZy/ZWUtcG5nLnBuZw">
