added a project to the project section as well as an empty contact me section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 Iste voluptate amet laborum dolorem earum accusamus, eius magnam odit.
             </div>
             <h3 class="skills-header">My Skills</h3>
+            <div id="skills-blurb">
+                <p> I recently completed a Software Engineering bootcamp that has provided a strong foundation with web development. I continue to build on the knowledge learned by creating real world applications.</p>
+            </div>   
+ 
             <div id="Skills">
                 <img src="https://imgs.search.brave.com/wLjt9bMfWqAa7nSuz2yehLVIsY1wc2CZShZjr8xgt6E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuc2Vla2xvZ28u/Y29tL2xvZ28tcG5n/LzIwLzIvaHRtbDUt/bG9nby1wbmdfc2Vl/a2xvZ28tMjA2ODM0/LnBuZw">
                 <img src="https://imgs.search.brave.com/cVNKvKp-SQXNRI_4DGbws66voWLYNwQve1kBvn7aldk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZnJlZXBuZ2xvZ29z/LmNvbS91cGxvYWRz/L2h0bWw1LWxvZ28t/cG5nL2h0bWw1LWxv/Z28tY3NzLWxvZ28t/cG5nLXRyYW5zcGFy/ZW50LXN2Zy12ZWN0/b3ItYmllLXN1cHBs/eS05LnBuZw">
@@ -38,7 +42,19 @@
                 <img src="https://imgs.search.brave.com/gLtUuF9fkSyZMSsl8qQPMgOAYK5LskYmz5RxWDA3XQk/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9hc3Nl/dHMuc3RpY2twbmcu/Y29tL2ltYWdlcy82/MmE3NGRkMTIyMzM0/M2ZiYzIyMDdkMDAu/cG5n">
                 <img src="https://imgs.search.brave.com/ESjybVgMKxNipMFCHp0N_pi5o6WW_GFZneE76DBJ55s/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxNi8w/NS9QeXRob24tTG9n/by1QTkctSW1hZ2Uu/cG5n">
                 <img src="https://imgs.search.brave.com/BAxhkzCHDEaIcz5cLgYP9yqvYsPtEpX478omuliMY9Y/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9sb2dv/cy13b3JsZC5uZXQv/d3AtY29udGVudC91/cGxvYWRzLzIwMjUv/MDcvTXlTUUwtTG9n/by0yMDAyLTUwMHgy/ODEucG5n">
+            </div>
+            <div id="Projects">
+                <h3>Projects</h3>
+                <div id="project1">
+                    
+                    <img id="project1-photo" src="https://cdn.pixabay.com/photo/2017/08/16/09/39/dumbbells-2646970_1280.jpg">
+                     <h4 id="project-title">Work Together</h4>
+                     <p id="project-description">This app is a social media platform for fitness enthusiasts. Similiar to Strava and their running audience.</p>
                 </div>
+            </div>
+            <div id="Contact">
+                <h3>Contact Me</h3>
+            </div>
         </main>
     </body>
 </html>
